# LAMBench

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd-ut.yml  run.yml  update_json.yml
dev/: ase_test_interface.py  test_interface.py
lambench/databases/: base_table.py  calculator_table.py  direct_predict_table.py  property_table.py  zeroshot_table.py
lambench/metrics/: direct_task_weights.yml  direct_tasks_metrics.yml  domain_results.py  downstream_tasks_metrics.yml  finetune_tasks_metrics.yml  metrics_calculations.py  models_to_show.yml  plot_generation.py  post_process.py  utils.py  visualization.py
lambench/metrics/results/: README.md  barplot.json  final_rankings.json  metadata.json  radar.json  results.json  scatter.json
lambench/metrics/vishelper/: metrics_calculations.py  plot_generation.py  results_fetcher.py
lambench/models/: __init__.py  ase_models.py  basemodel.py  dp_models.py  models_config.yml
lambench/tasks/: __init__.py  base_task.py
lambench/tasks/calculator/: calculator_tasks.py  calculator_tasks.yml  nve_md.py  nve_md_data.py
lambench/tasks/calculator/batch_infer/: batch_infer.py
lambench/tasks/calculator/infer_efficiency/: infer_efficiency.py
lambench/tasks/calculator/inference_efficiency/: efficiency_utils.py  inference_efficiency.py
lambench/tasks/calculator/nve_md/: nve_md.py
lambench/tasks/calculator/phonon/: phonon.py  phonon_utils.py
lambench/tasks/calculator/torsionnet/: torsionnet.py
lambench/tasks/direct/: direct_predict.py  direct_predict_ase.py  direct_tasks.py  direct_tasks.yml
lambench/tasks/finetune/: finetune_tasks.yml  property_finetune.py
lambench/tasks/utils/: __init__.py
lambench/workflow/: dflow.py  entrypoint.py  validate_configs.py
test/: conftest.py
test/metrics/: conftest.py  test_post_process.py  test_visualization.py
test/models/: test_dp_models.py
test/tasks/calculator/: test_nve_md.py
test/tasks/direct/: test_direct_predict.py  test_direct_predict_ase.py
test/tasks/finetune/: test_property_finetune.py
test/workflow/: test_entrypoint.py  test_validate_config.py
tests/: conftest.py  test_metrics_calculations.py
tests/metrics/: conftest.py  test_metrics_calculator.py  test_post_process.py  test_visualization.py
tests/models/: test_dp_models.py
tests/tasks/calculator/: test_efficiency_utils.py  test_nve_md.py
tests/tasks/direct/: test_direct_predict.py
tests/tasks/finetune/: test_property_finetune.py
tests/workflow/: test_entrypoint.py  test_validate_config.py
