[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambench"
version = "0.1.0"
dependencies = [
	"ase",
	"python-dotenv",
	"numpy",
	"pydantic",
	"pyyaml",
	"SQLAlchemy[pymysql]",
	"tqdm",
	"dpdata @ git+https://github.com/deepmodeling/dpdata.git@944af9dfbe0a6ae78d87a189a589d7614cbd8989#egg=dpdata",
]

authors = [
  { name="DeepModeling"},
  { name = "Han Wang", email = "wang_han@iapcm.ac.cn" },
]

description = "Benchmarking of Large Atomic Models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
deepmd = ["deepmd-kit @ git+https://github.com/iProzd/deepmd-kit.git@P0131_dpa3_optim_angle#egg=deepmd-kit", "torch>=2.1"]
fairchem = ["fairchem-core", "torch_geometric", "pyg_lib", "torch_scatter", "torch_sparse", "torch_cluster", "torch_spline_conv"] # See README
mace = ["mace-torch"]
mattersim = ["mattersim @ git+https://github.com/microsoft/mattersim.git@f1028e5eee8cc19edfc1d44f3c468c1206192daa"]
orb = ["orb-models","pynanoflann@git+https://github.com/dwastberg/pynanoflann#egg=af434039ae14bedcbb838a7808924d6689274168"]
sevenn = ["sevenn"]
test = ["pytest"]
dflow = ["pydflow", "lbg"]
phonopy = ["phonopy@git+https://github.com/phonopy/phonopy.git", "scikit-learn"]


[project.urls]
Homepage = "https://github.com/deepmodeling/LAMBench"
Issues = "https://github.com/deepmodeling/LAMBench/issues"

[project.scripts]
lambench = "lambench.workflow.entrypoint:main"
postprocess = "lambench.metrics.post_process:main"
visualization = "lambench.metrics.visualization:main"

[tool.setuptools.packages.find]
include = ["lambench*"]

[tool.setuptools.package-data]
"*" = ["*.yml"]
